# python-project-template

./: .pre-commit-config.yaml  README.md  TODO.txt  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: publish  publish.yml  test.yml
